--- a/Interor/style.css
+++ b/Interor/style.css
@@ -1,976 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.container {
-    width: 1366px;
-    margin: 0 auto;
-}
-
-.slider {
-    height: 800px;
-    background-image: url(img/slider-img.jpg);
-    position: relative;
-}
-
-.padding-site {
-    padding-left: 98px;
-    padding-right: 98px;
-}
-
-.header {
-    padding-top: 63px;
-}
-
-.menu {
-    float: right;
-}
-
-.menu-list {
-    list-style-type: none;
-    float: left;
-}
-
-.menu-link:hover {
-    color: #212121;
-}
-
-.menu-link {
-    color: #8c8c8c;
-    font-size: 14px;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 10px 13px;
-
-}
-
-.menu-link-active {
-    color: #212121;
-    font-weight: 700;
-    letter-spacing: 1.4px;
-    border-bottom: 3px solid #212121;
-    text-decoration: none;
-    padding: 10px 13px;
-}
-
-.slider-text {
-    margin-top: 283px;
-}
-
-.slider-trending {
-    color: #43a047;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.slider-h2 {
-    color: #212121;
-    font-size: 62px;
-    font-weight: 100;
-    text-transform: uppercase;
-}
-
-.slider-content {
-    color: #6c6c6c;
-    font-size: 14px;
-    font-weight: 300;
-    width: 458px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    line-height: 24px;
-
-}
-
-.button {
-    color: #212121;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
-    border-radius: 23px;
-    background-color: #ffffff;
-    width: 212px;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    display: inline-block;
-    text-decoration: none;
-    letter-spacing: 3.6px;
-    position: relative;
-}
-
-.slider-arrow {
-    margin-left: 10px;
-    margin-top: 15.5px;
-    position: absolute;
-    display: none;
-}
-
-.explore-arrow {
-    margin-left: 10px;
-    margin-top: 5px;
-    position: absolute;
-    display: none;
-}
-
-.button:hover .slider-arrow {
-    display: inline-block;
-}
-
-.button:active {
-    box-shadow: none;
-}
-
-.overlay-button:active {
-    box-shadow: none;
-}
-
-.button-explore:hover .explore-arrow {
-    display: inline-block;
-}
-
-.pagination {
-    position: absolute;
-    width: 1170px;
-    bottom: 19px;
-    text-align: center;
-}
-
-.circle {
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    background-color: #c7c7c7;
-    border-radius: 50%;
-    margin: 5px;
-}
-
-.circle-active {
-    width: 40px;
-    height: 40px;
-    background-color: #212121;
-    margin-bottom: 0;
-}
-
-.circle:hover {
-    background-color: #212121;
-}
-
-.featured-container {
-    height: 609px;
-    background-color: #ffffff;
-}
-
-.f-catalog {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-
-.transparent {
-    position: relative;
-}
-
-.chosen-picture {
-    position: relative;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    text-align: center;
-    opacity: 0;
-}
-
-.transparent:hover .chosen-picture {
-    opacity: 0.15;
-}
-
-.transparent:hover .overlay {
-    opacity: 1;
-}
-
-.overlay-button {
-    width: 48px;
-    height: 48px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
-    margin-top: 62px;
-    margin-left: 111px;
-    margin-right: 111px;
-    display: inline-flex;
-}
-
-.fishnet-overlay-h2 {
-    color: #212121;
-    font-size: 22px;
-    font-weight: 700;
-    text-align: center;
-    margin-top: 19px;
-    line-height: 29.88px
-}
-
-.fishnet-overlay-content {
-    text-align: center;
-    color: #6c6c6c;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 21.91px;
-    margin-top: 19px;
-    margin-bottom: 48px;
-    margin-left: 32px;
-    letter-spacing: -0.3px;
-    width: 206px;
-}
-
-img[alt="arrow2"] {
-    margin-left: 18px;
-    margin-right: 18px;
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-
-img[alt="arrow1"] {
-    width: 9px;
-    height: 12px;
-    margin-left: 12px;
-    margin-top: 4px;
-    margin-bottom: 1px;
-}
-
-.feat-products {
-    padding-top: 120px;
-    padding-bottom: 50px;
-}
-
-.menu-f {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-
-
-}
-
-.menu-f-list {
-    list-style-type: none;
-
-}
-
-.menu-f-link:hover {
-    color: #212121;
-    border-bottom: 1px solid #212121;
-}
-
-
-.menu-f-link {
-    color: #6c6c6c;
-    font-size: 36px;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 21px 11px;
-    border-bottom: 1px solid #6c6c6c;
-    padding-right: 22px;
-}
-
-.menu-f-link-active {
-    color: #212121;
-    font-size: 36px;
-    font-weight: 700;
-    border-bottom: 3px solid #212121;
-    text-decoration: none;
-    padding: 19px 9px;
-    padding-right: 20px;
-}
-
-.button-explore {
-    color: #212121;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 24px;
-    display: flex;
-    text-decoration: none;
-    letter-spacing: 3.6px;
-    justify-content: flex-end;
-    position: relative;
-    bottom: 15px;
-    float: right;
-}
-
-
-.exclusive-container {
-    display: flex;
-    flex-direction: row;
-    height: 683px;
-}
-
-.chair-1-exclusive {
-    background-image: url(img/promo-img1.jpg);
-    width: 50%
-}
-
-.chair-2-exclusive {
-    background-image: url(img/promo-img2.png);
-    width: 50%;
-}
-
-.exclusive-text-1 {
-    display: flex;
-    flex-direction: column;
-}
-
-.exclusive-text-2 {
-    display: flex;
-    flex-direction: column;
-}
-
-.padding-exclusive {
-    padding-left: 51px;
-    padding-top: 228px;
-}
-
-.exclusive-paragraph {
-    color: #1e88e5;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    padding-bottom: 18px;
-}
-
-.exclusive-h2 {
-    color: #212121;
-    font-size: 36px;
-    font-weight: 700;
-    padding-bottom: 24px;
-}
-
-.exclusive-content {
-    color: #6c6c6c;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 24.04px;
-
-}
-
-.exclusive-button {
-    margin-top: 34px;
-}
-
-img[alt="arrow-button"] {
-    width: 9px;
-    height: 12px;
-    margin-left: 12px;
-}
-
-.trending-conteiner {
-    height: auto;
-}
-
-.trending-products {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 90px;
-
-}
-
-img[alt="trending-products"] {
-    margin: 0 0 30px;
-    width: calc(1/3*100% - (1 - 1/3)*30px);
-}
-
-.trending-heading {
-    padding-top: 119px;
-    padding-bottom: 64px;
-
-}
-
-.trending-h2 {
-    color: #212121;
-    font-size: 36px;
-    font-weight: 700;
-}
-
-
-.fishnet-slider-container {
-    background-image: url(img/fishnet-slider.jpg);
-    height: 800px;
-    position: relative;
-}
-
-.slider-deal {
-    color: #e53935;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-}
-
-.slider-second {
-    padding-top: 287px
-}
-
-.pillow-items {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 570px;
-    padding-left: 30px
-}
-
-.pillow-container {
-    display: flex;
-    flex-direction: row;
-    padding-top: 120px;
-    padding-bottom: 90px;
-}
-
-.pillow-left {
-    display: flex;
-    flex-wrap: wrap;
-    background-image: url(img/product-1-lg.jpg);
-    height: 570px;
-    width: 570px;
-
-}
-
-
-img[alt="pillow1"] {
-    margin: 0 0 30px;
-}
-
-.mobile-container {
-    display: flex;
-    background-image: url(img/back-img.jpg);
-    height: 516px;
-}
-
-.app {
-    padding-left: 99px;
-    padding-top: 125px;
-}
-
-.mobile-app {
-    color: #6c6c6c;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    padding-bottom: 22px;
-}
-
-.h2-app {
-    color: #212121;
-    font-size: 62px;
-    font-weight: 100;
-    text-transform: uppercase;
-    line-height: 72px;
-    padding-left: 7px;
-
-}
-
-.discription-app {
-    color: #6c6c6c;
-    font-size: 22px;
-    font-weight: 300;
-    line-height: 24px;
-    padding-top: 26px;
-    padding-bottom: 33px;
-}
-
-.button-app1 {
-    padding-left: 10px;
-}
-
-.button-app {
-    padding-left: 3px;
-}
-
-footer {
-    height: 384px;
-    background-color: #f7f7f7;
-}
-
-.footer-container {
-    padding-top: 120px;
-
-}
-
-.top-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.contact-footer {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact-h2 {
-    color: #6c6c6c;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    padding-bottom: 24px;
-}
-
-.contact-description {
-    color: #212121;
-    font-size: 14px;
-    font-weight: 300;
-    width: 221px;
-    line-height: 22px
-}
-
-.description-second {
-    padding-top: 20px;
-}
-
-.useful-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.useful-h2 {
-    color: #6c6c6c;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    padding-bottom: 24px;
-
-}
-
-.useful-information-1, .useful-information-2 {
-    color: #212121;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.7px;
-}
-
-.useful-list-1, .useful-list-2 {
-    list-style-type: none;
-}
-
-.useful-list-1 a, .useful-list-2 a {
-    text-decoration: none;
-    color: #6c6c6c;
-}
-
-.useful-div {
-    display: flex;
-    flex-direction: row;
-    line-height: 26px;
-}
-
-.useful-information-1 {
-    display: flex;
-    flex-direction: column;
-}
-
-.useful-information-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding-left: 103px
-}
-
-.stayintouch-container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-.stay-h2 {
-    color: #6c6c6c;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.8px;
-    padding-bottom: 24px;
-}
-
-.stay-description {
-    color: #212121;
-    font-size: 14px;
-    font-weight: 300;
-    width: 363px;
-    line-height: 22px;
-}
-
-.footer-content__subscribe-form {
-    display: flex;
-    flex-direction: row;
-    margin-top: 25px;
-}
-
-.footer-content__subscribe-email-field {
-    text-align: left;
-    height: 48px;
-    width: 320px;
-    padding-left: 19px;
-}
-
-.footer-content__subscribe-submit-button {
-    width: 21px;
-    height: 17px;
-    margin-left: -35px;
-    margin-top: 16px;
-}
-
-.footer-social {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    align-items: center;
-    margin-top: 49px;
-}
-
-.footer-social__links a {
-    padding: 0 2.5px;     
-}
-
-.copyright {
-    color: #6c6c6c;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.6px;
-}
-
-
-.footer-social__terms-policy {
-    margin-right: 15px;
-}
-
-.footer-social__terms-policy-link {
-    color: #6c6c6c;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.6px;
-    text-decoration: none;
-}
-
-/* Contacts Style */
-
-.header-catalog-contacts {
-    background-color: #f5f5f5;
-}
-
-.padding-site-catalog {
-    padding-left: 98px;
-    padding-right: 167px;
-}
-
-.contacts-h2 {
-    color: #212121;
-    font-size: 62px;
-    font-weight: 100;
-    padding-top: 171px;
-    padding-bottom: 56px;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-bottom: 121px;
-    padding-top: 71px;
-}
-
-.column-california {
-    border: 1px solid #9c9c9c;
-    width: 370px;
-    height: 370px;
-    border: 1px solid #9c9c9c;
-    background-color: #ffffff;  
-}
-
-
-.fa-map-marker-alt {
-    color: #212121;
-    font-size: 48px;
-    font-weight: 400;
-    text-transform: uppercase
-}
-
-.map {
-    display: flex;
-    justify-content: center;
-    padding-top: 48px;
-    padding-bottom: 34px;
-}
-
-.california-h2 {
-    color: #212121;
-    font-size: 22px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    padding-bottom: 23px;
-}
-
-.info {
-    color: #6c6c6c;
-    font-size: 14px;
-    font-weight: 700;
-    font-weight: 700;
-    text-align: center;
-    padding-bottom: 5px;
-}
-
-.phone, .mail, .adress {
-    color: #212121;
-    font-weight: 700;
-    font-weight: 300;
-    text-align: center;
-    padding-bottom: 15px;
-}
-
-/*Products Style*/
-
-.productsrange-h2 {
-   color: #212121;
-    font-size: 62px;
-    font-weight: 100;
-    padding-top: 168px;
-    padding-bottom: 44px;
-}
-
-.product-menu {
-    background-color: #ffffff;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding-bottom: 72px;
-    padding-top: 71px;
-    padding-left: 105px;
-}
-
-
-.product-menu-list {
-    list-style-type: none;
-    float: left;
-}
-
-.product-menu-link:hover {
-    color: #212121;
-}
-
-.product-menu-link {
-color: #6c6c6c;
-font-size: 18px;
-font-weight: 700;
-text-transform: uppercase;
-letter-spacing: 1.8px;
-padding: 21px 13px;
-text-decoration: none;
-}
-
-.product-menu-link-active {
-    color: #212121;
-    font-weight: 700;
-    letter-spacing: 1.8px;
-    border-bottom: 3px solid #212121;
-    text-decoration: none;
-    padding: 19px 30px 20px 7px;
-}
-
-.underline {
-    border-bottom: 1px solid #6c6c6c;
-    padding: 19px 13px;
-}
-
-.products-row {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-bottom: 71px;
-    padding-top: 50px;
-}
-
-
-.refresh-button a {
-    text-decoration: none;
-    color: #212121;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 42px;
-    font-weight: 400;
-}
-
-.refresh-button a:hover{
-    color: #6c6c6c;
-}
-
-.refresh-button {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 140px;
-}
-
-/* Product-Detale Styles*/
-
-.header-catalog-productdetails {
-    background-color: #ffffff;
-}
-
-#product-menu {
-    background: #f4f4f4;
-    position: relative;
-    overflow: hidden;
-    height: 70px;
-    margin-top: 29px;
-    margin-bottom: 72px;
-}
-.detail-product-menu {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.detmenu-list {
-    list-style: none;
-    padding-top: 26px;
-}
-
-.detmenu-link {
-color: #6c6c6c;
-font-size: 18px;
-font-weight: 700;
-text-transform: uppercase;
-text-decoration: none;
-padding: 0px 25px;
-}
-
-.detmenu-link-active {
-color: #212121;
-font-size: 18px;
-font-weight: 700;
-text-transform: uppercase;
-text-decoration: none;
-padding: 0px 25px;  
-}
-
-.detmenu-link:hover{
-  color: #212121; 
-}
-
-.description-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.item {
-  width: calc(1/2*100% - (1 - 1/2)*56px);
-}
-
-.controlwrap {
-padding-right: 10px;
-}
-
-.sliderblockchair {
-display: flex;
-flex-direction: row;
-justify-content: center;
-}
-
-
-.chairinfo-h2 {
-    padding-top: 47px;
-    padding-left: 147px;
-    color: #212121;
-    font-size: 36px;
-    font-weight: 700;
-    
-}
-
-.chairhotdeal {
-    padding-top: 10px;
-    color: #e53935;
-    letter-spacing: 1.8px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 48.02px;
-    text-transform: uppercase;
-    padding-left: 208px;
-}
-
-.price {
-    font-size: 72px;
-    text-transform: uppercase;
-    color: #212121;
-    font-weight: 300;
-}
-
-.sym{
-    font-size: 48px;
-    color: #212121;
-    font-weight: 300;
-}
-
-span {
-  display: inline;
-}
-
-.pricein {
-    padding-left: 140px;
-}
-
-.chairdesc {
-    padding-top: 49px;
-    padding-left: 5px;
-    padding-right: 6px;
-    width: 499px;
-    height: 244px;
-    color: #212121;
-    font-size: 16px;
-    font-weight: 300;
-    letter-spacing: 0.4px;
-}
-
-.button2 {
-    margin-top: 31px;
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-    box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
-    border-radius: 35px;
-    background-color: #f44336;
-    width: 510px;
-    height: 71px;
-    line-height: 71px;
-    text-align: center;
-    display: inline-block;
-    text-decoration: none;
-    letter-spacing: 9px;
-}
+@import url('css/mainpage.css');
+@import url('css/productdetails.css');
+@import url('css/products.css');
+@import url('css/contacts.css');
